Fix for failing tests. (#5423)